ipc/ipdl/test/ipdl/error/cyclecheck_Grandchild.ipdl
include protocol cyclecheck_Child;
include protocol cyclecheck_Parent;

protocol cyclecheck_Grandchild {
    manager cyclecheck_Child;
    manages cyclecheck_Parent;

child:
    async cyclecheck_Parent();
    async __delete__();
};

